--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 .radix-themes {
   display: grid;
   grid-template-columns: 1fr 2fr 6fr 2fr 1fr;
-  grid-template-rows: 60px 750px;
+  grid-template-rows: 1fr 15fr;
 }
 
 /* Nav Bar Stuff */
