--- a/src/components/Languages/Languages.css
+++ b/src/components/Languages/Languages.css
@@ -1,12 +1,5 @@
 /* Basic Mapped */
 
-#CodesMainCards {
-  grid-area: 2 / 2 / 3 / 9;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
 .CodesCard {
   display: grid;
   grid-template-rows: 8fr 1fr 1fr;
@@ -33,10 +26,11 @@
 /* Other */
 
 #CodesMainCards {
-  grid-area: 2 / 2 / 3 / 9;
+  grid-area: 4 / 2 / 5 / 9;
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-self: center;
+  justify-self: center;
 }
 
 .CodesCard {
