--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,7 +1,7 @@
 #projects-cards-div {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .projects-container {
@@ -12,7 +12,7 @@
 .card {
   width: 100%;
   height: 80%;
-  position: relative;
+  /* position: relative; */
 
   /* Animation stuff */
 
@@ -40,40 +40,60 @@
   backface-visibility: hidden;
   display: grid;
   grid-template-rows: 9fr 1fr 2fr;
+  grid-template-columns: 1fr;
 }
 
-.front-content,
-.back-content {
+.card-front-content,
+.card-back-content {
+  grid-area: 2 / 1 / 4 / 2;
   text-align: center;
-  grid-row: 3 / 4;
+  display: grid;
+  grid-template-rows: 1fr 5fr;
 }
 
 /* Front Stuff */
 
 .card-front {
   background-color: var(--card1);
+  border-radius: 16px 16px 16px 16px;
 }
 
 .card-front-image {
   display: flex;
   justify-self: center;
   width: 50%;
-  height: 100%;
+  height: 50%;
   grid-row: 1 / 2;
 }
 
+.card-seperator {
+  grid-row: 1 / 2;
+  display: flex;
+  justify-items: center;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.card-sub-separator {
+  background-color: var(--card1-text);
+}
+
 .card-front-text {
+  display: flex;
   color: var(--card1-text);
+  grid-row: 2 / 3;
+  place-self: center center;
 }
 
 /* Back Stuff */
 
 .card-back {
-  /* background-color: var(--card2); */
-  background-color: red;
+  background-color: var(--card2);
   transform: rotateY(180deg);
+  border-radius: 16px 16px 16px 16px;
 }
 
 .card-back-text {
-  /* color: var(--card2-text); */
+  grid-area: 3 / 1 / 4 / 2;
+  color: var(--card2-text);
 }
