--- a/src/components/Languages/Languages.css
+++ b/src/components/Languages/Languages.css
@@ -1,94 +1,69 @@
-/* Basic Mapped */
-
-.CodesCard {
-  display: grid;
-  grid-template-rows: 8fr 1fr 1fr;
-  width: 10%;
-  height: 60%;
-}
-
-.CodeLogo {
-  width: 100%;
-  aspect-ratio: 1/1;
-}
-
-.CodeText {
-  grid-area: 3 / 1 / 4 / 2;
-  display: flex;
-  justify-content: center;
-  align-items: start;
-}
-
-.CodeSep {
-  grid-area: 2 / 1 / 3 / 2;
-}
-
-/* Other */
-
-#CodesMainCards {
-  grid-area: 4 / 2 / 5 / 9;
+#lang-cards-div {
   display: flex;
   justify-content: space-evenly;
   align-self: center;
   justify-self: center;
+  width: 75%;
 }
 
-.CodesCard {
+.lang-cards-container {
+  display: flex;
+  position: relative;
+}
+
+.lang-container:hover {
+  z-index: 10;
+}
+
+.lang-cards {
   display: grid;
   grid-template-rows: 8fr 1fr 1fr;
+  width: 10%;
+  height: 60%;
   align-items: center;
   justify-items: center;
-  padding: 1rem;
   border-radius: 16px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  transform-origin: center;
 }
 
-.CodesCard.compact {
+.lang-cards-grow {
+  cursor: pointer;
+  display: inline-block;
+}
+
+/* Compact */
+
+.lang-cards.compact {
   width: 80px;
   height: 80px;
 }
 
-.CodesCard.expanded {
+.lang-cards-logo {
+  width: 100%;
+  aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+}
+
+/* Expanded */
+
+.lang-cards-sep {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.lang-cards.expanded {
   width: 200px;
   height: 250px;
+  z-index: 10;
 }
 
-.CodeLogo {
-  width: 80%;
-  height: auto;
-  aspect-ratio: 1 / 1;
-  grid-row: 1;
-  display: block;
-  justify-self: center;
-  align-self: center;
-}
-
-.CodeText {
+.lang-cards-text {
   grid-area: 3 / 1 / 4 / 2;
   display: flex;
   justify-content: center;
   align-items: start;
-}
-
-.CodeSep {
-  grid-area: 2 / 1 / 3 / 2;
-  width: 100%;
-}
-
-.Over {
-  text-align: center;
-  width: 75%;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-}
-
-.grow-card {
-  cursor: pointer;
-  display: inline-block;
 }
