--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,18 +1,18 @@
 #projects-cards-div {
   display: flex;
   justify-content: space-evenly;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .projects-container {
   width: 10%;
-  aspect-ratio: 1/ 1.2;
+  height: 80%;
 }
 
 .card {
   width: 100%;
-  height: 80%;
-  /* position: relative; */
+  height: 100%;
+  position: relative;
 
   /* Animation stuff */
 
@@ -41,6 +41,7 @@
   display: grid;
   grid-template-rows: 9fr 1fr 2fr;
   grid-template-columns: 1fr;
+  cursor: pointer;
 }
 
 .card-front-content,
