Added profile files Created animation for profile image and text Imported profile to main page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@ https://www.schemecolor.com/lovely-sculpture.php */
 .radix-themes {
   display: grid;
   grid-template-columns: 1fr 2fr 6fr 2fr 1fr;
-  grid-template-rows: 50px 1500px;
+  grid-template-rows: 1fr 30fr;
 }
 
 /* Nav Bar Stuff */
