--- a/src/app/main.css
+++ b/src/app/main.css
@@ -2,8 +2,8 @@
   background-color: var(--background);
   grid-area: 2 / 1 / 3 / 6;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(5, minmax(500px, auto));
 }
 
 #profile-div {
