--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .projects-container {
-  width: 10%;
   height: 80%;
+  aspect-ratio: 0.8 / 1;
 }
 
 .card {
