Changed profile section to grid layout for smoother animation Added y section to profile image animation Added profile image backgrounds Added more text to profile image Added function to click to close languages and removed hover end Added footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,7 @@ https://www.schemecolor.com/lovely-sculpture.php */
   grid-area: 1 / 1 / 2 / 6;
   background-color: var(--navbar);
   color: var(--text-nav);
+  position: static;
 }
 
 /* Main Stuff */
