--- a/src/app/main.css
+++ b/src/app/main.css
@@ -3,7 +3,7 @@
   grid-area: 2 / 1 / 3 / 6;
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(5, minmax(500px, auto));
+  grid-template-rows: repeat(5, minmax(500px, auto)) 100px;
 }
 
 #profile-div {
@@ -34,4 +34,10 @@
   grid-area: 5 / 1 / 6 / 10;
   display: grid;
   background-color: -var(--background);
+}
+
+#footer-div {
+  grid-area: 6 / 1 / 7 / 10;
+  display: grid;
+  background-color: var(--background2);
 }
