--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,5 @@
 #profile-sub-div {
-  display: flex;
-  justify-content: center;
+  grid-column: 1/10;
   align-items: center;
   color: var(--text-primary);
   height: 100%;
@@ -8,20 +7,64 @@
 }
 
 #profile-motion-div {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 14fr 1fr;
   align-items: center;
   width: 100%;
+  height: 100%;
+}
+
+#profile-image-div {
+  grid-area: 1 / 3 / 3 / 4;
+  grid-template-rows: 14fr 1fr;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 #profile-image {
+  grid-row: 1 / 2;
+  display: flex;
+  border-radius: 50%;
+  place-self: center center;
+  height: 94%;
+  width: 94%;
+}
+
+#profile-empty-div-1 {
+  display: grid;
+  place-self: center center;
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  background-color: var(--background2);
+  border: 2px rgb(0, 0, 0, 0.3) solid;
   border-radius: 50%;
 }
 
+#profile-empty-div-2 {
+  display: grid;
+  place-self: center center;
+  height: 95%;
+  width: 95%;
+  background-color: var(--background);
+  border: 2px rgb(0, 0, 0, 0.3) solid;
+  border-radius: 50%;
+}
+
+#profile-image-text {
+  grid-row: 2 / 3;
+  display: flex;
+  align-self: baseline;
+  justify-self: center;
+}
+
 #profile-info {
+  grid-column: 4/6;
   display: flex;
   justify-content: center;
   flex-direction: column;
   min-width: 200px;
-  margin-left: 20px;
+  margin-left: 5%;
 }
